Bound and serialize SSE fan-out