@@ -1,39 +1,83 @@
 package com.ravcube.lib.stream.infrastructure.sse;
 
-import com.ravcube.lib.stream.api.ClientStreamRefreshNotification;
-import com.ravcube.lib.stream.application.ClientStreamLimitExceededException;
+import com.ravcube.lib.logger.Logger;
+import com.ravcube.lib.logger.LoggerFactory;
 import com.ravcube.lib.stream.domain.ClientStreamSubscription;
 import com.ravcube.lib.stream.infrastructure.config.ClientStreamProperties;
+import org.springframework.beans.factory.DisposableBean;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 import org.springframework.web.servlet.mvc.method.annotation.SseEmitter;
 
 import java.io.IOException;
 import java.time.Duration;
+import java.util.ArrayDeque;
 import java.util.Collection;
+import java.util.Collections;
+import java.util.Deque;
+import java.util.HashMap;
+import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
-import java.util.concurrent.CopyOnWriteArrayList;
+import java.util.concurrent.ArrayBlockingQueue;
+import java.util.concurrent.Executor;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.RejectedExecutionException;
+import java.util.concurrent.TimeUnit;
 import java.util.function.LongFunction;
-import java.util.function.Predicate;
 
 @Component
-public final class ClientStreamRegistry {
+public final class ClientStreamRegistry implements DisposableBean {
 
     public static final String REFRESH_EVENT = "refresh";
 
     private final Duration timeout;
     private final int maxIdsPerSubscription;
     private final int maxSubscriptions;
+    private final int maxPendingEventsPerSubscription;
     private final LongFunction<SseEmitter> emitterFactory;
-    private final CopyOnWriteArrayList<RegisteredSubscription> subscriptions = new CopyOnWriteArrayList<>();
+    private final Executor sender;
+    private final ExecutorService ownedSender;
+    private final Logger logger;
+    private final java.util.concurrent.CopyOnWriteArrayList<RegisteredSubscription> subscriptions =
+            new java.util.concurrent.CopyOnWriteArrayList<>();
 
-    public ClientStreamRegistry(ClientStreamProperties properties) {
-        this(properties, timeout -> new SseEmitter(timeout));
+    @Autowired
+    public ClientStreamRegistry(
+            ClientStreamProperties properties,
+            LoggerFactory loggerFactory
+    ) {
+        this(
+                properties,
+                timeout -> new SseEmitter(timeout),
+                createSender(properties),
+                true,
+                loggerFactory.getLogger(ClientStreamRegistry.class)
+        );
     }
 
     ClientStreamRegistry(
             ClientStreamProperties properties,
             LongFunction<SseEmitter> emitterFactory
+    ) {
+        this(properties, emitterFactory, Runnable::run, false, Logger.noop());
+    }
+
+    ClientStreamRegistry(
+            ClientStreamProperties properties,
+            LongFunction<SseEmitter> emitterFactory,
+            Executor sender
+    ) {
+        this(properties, emitterFactory, sender, false, Logger.noop());
+    }
+
+    private ClientStreamRegistry(
+            ClientStreamProperties properties,
+            LongFunction<SseEmitter> emitterFactory,
+            Executor sender,
+            boolean ownsSender,
+            Logger logger
     ) {
         final ClientStreamProperties validatedProperties = Objects.requireNonNull(
                 properties,
@@ -42,10 +86,15 @@ public final class ClientStreamRegistry {
         this.timeout = validatedProperties.timeout();
         this.maxIdsPerSubscription = validatedProperties.maxIdsPerSubscription();
         this.maxSubscriptions = validatedProperties.maxSubscriptions();
+        this.maxPendingEventsPerSubscription =
+                validatedProperties.maxPendingEventsPerSubscription();
         this.emitterFactory = Objects.requireNonNull(
                 emitterFactory,
                 "emitterFactory must not be null"
         );
+        this.sender = Objects.requireNonNull(sender, "sender must not be null");
+        this.ownedSender = ownsSender ? (ExecutorService) sender : null;
+        this.logger = Objects.requireNonNull(logger, "logger must not be null");
     }
 
     public SseEmitter subscribe(String resourceName, Collection<String> resourceIds) {
@@ -56,29 +105,21 @@ public final class ClientStreamRegistry {
                 validatedIds
         );
 
-        return register(subscription);
-    }
+        synchronized (subscriptions) {
+            if (subscriptions.size() >= maxSubscriptions) {
+                throw new ClientStreamLimitExceededException(
+                        "Maximum number of stream subscriptions has been reached"
+                );
+            }
+        }
 
-    public void publish(String resourceName, String resourceId, long version) {
-        final String validatedResourceName = requireText(resourceName, "resourceName");
-        final ClientStreamRefreshNotification notification =
-                new ClientStreamRefreshNotification(resourceId, version);
-
-        publish(
-                subscription -> subscription.accepts(
-                        validatedResourceName,
-                        notification.resourceId()
-                ),
-                notification
-        );
-    }
-
-    private SseEmitter register(ClientStreamSubscription subscription) {
         final SseEmitter emitter = Objects.requireNonNull(
                 emitterFactory.apply(timeout.toMillis()),
                 "emitterFactory returned null"
         );
-        final RegisteredSubscription registered = RegisteredSubscription.of(subscription, emitter);
+        final RegisteredSubscription registered =
+                new RegisteredSubscription(subscription, emitter, maxPendingEventsPerSubscription);
+
         synchronized (subscriptions) {
             if (subscriptions.size() >= maxSubscriptions) {
                 throw new ClientStreamLimitExceededException(
@@ -98,31 +139,92 @@ public final class ClientStreamRegistry {
         return emitter;
     }
 
-    private void publish(
-            Predicate<RegisteredSubscription> selector,
-            ClientStreamRefreshNotification notification
-    ) {
-        subscriptions.stream()
-                .filter(selector)
-                .forEach(subscription -> send(subscription.emitter(), notification));
-    }
+    public void publish(String resourceName, String resourceId, long version) {
+        final String validatedResourceName = requireText(resourceName, "resourceName");
+        final ClientStreamRefreshNotification notification =
+                new ClientStreamRefreshNotification(resourceId, version);
 
-    private void send(
-            SseEmitter emitter,
-            ClientStreamRefreshNotification notification
-    ) {
-        try {
-            synchronized (emitter) {
-                emitter.send(SseEmitter.event().name(REFRESH_EVENT).data(notification));
+        for (RegisteredSubscription subscription : subscriptions) {
+            if (!subscription.accepts(validatedResourceName, notification.resourceId())) {
+                continue;
             }
-        } catch (IOException | IllegalStateException exception) {
-            remove(emitter);
-            emitter.completeWithError(exception);
+
+            final EnqueueResult result = subscription.enqueue(notification);
+            if (result == EnqueueResult.SCHEDULE) {
+                schedule(subscription);
+            } else if (result == EnqueueResult.OVERFLOW) {
+                removeSlowSubscription(subscription);
+            }
         }
     }
 
+    private void schedule(RegisteredSubscription subscription) {
+        try {
+            sender.execute(() -> drain(subscription));
+        } catch (RejectedExecutionException exception) {
+            logger.error(
+                    "SSE sender rejected a stream subscription for resource {}",
+                    exception,
+                    subscription.subscription.resourceName
+            );
+            remove(subscription.emitter);
+            subscription.emitter.completeWithError(exception);
+        }
+    }
+
+    private void drain(RegisteredSubscription subscription) {
+        while (true) {
+            final ClientStreamRefreshNotification notification = subscription.next();
+            if (notification == null) {
+                return;
+            }
+
+            try {
+                synchronized (subscription.emitter) {
+                    subscription.emitter.send(
+                            SseEmitter.event()
+                                    .name(REFRESH_EVENT)
+                                    .data(notification)
+                    );
+                }
+            } catch (IOException | IllegalStateException exception) {
+                logger.warn(
+                        "SSE send failed for resource {}",
+                        subscription.subscription.resourceName
+                );
+                remove(subscription.emitter);
+                subscription.emitter.completeWithError(exception);
+                return;
+            }
+        }
+    }
+
+    private void removeSlowSubscription(RegisteredSubscription subscription) {
+        logger.warn(
+                "SSE subscription removed after reaching the pending event limit for resource {}",
+                subscription.subscription.resourceName
+        );
+        remove(subscription.emitter);
+        subscription.emitter.completeWithError(
+                new IOException("SSE subscriber is too slow")
+        );
+    }
+
+    private static ExecutorService createSender(ClientStreamProperties properties) {
+        final int threads = Math.min(8, Math.max(2, properties.maxSubscriptions()));
+        return new java.util.concurrent.ThreadPoolExecutor(
+                threads,
+                threads,
+                0L,
+                TimeUnit.MILLISECONDS,
+                new ArrayBlockingQueue<>(properties.maxSubscriptions()),
+                Executors.defaultThreadFactory(),
+                new java.util.concurrent.ThreadPoolExecutor.AbortPolicy()
+        );
+    }
+
     private void remove(SseEmitter emitter) {
-        subscriptions.removeIf(subscription -> subscription.emitter() == emitter);
+        subscriptions.removeIf(subscription -> subscription.emitter == emitter);
     }
 
     public void unsubscribe(SseEmitter emitter) {
@@ -131,6 +233,13 @@ public final class ClientStreamRegistry {
 
     int activeSubscriptions() {
         return subscriptions.size();
+    }
+
+    @Override
+    public void destroy() {
+        if (ownedSender != null) {
+            ownedSender.shutdownNow();
+        }
     }
 
     private static Set<String> validateIds(
@@ -149,7 +258,7 @@ public final class ClientStreamRegistry {
             throw new IllegalArgumentException("resourceIds must not be empty");
         }
 
-        return Set.copyOf(resourceIds);
+        return Collections.unmodifiableSet(Set.copyOf(resourceIds));
     }
 
     private static String requireText(String value, String name) {
@@ -160,24 +269,60 @@ public final class ClientStreamRegistry {
         return value;
     }
 
-    private record RegisteredSubscription(
-            ClientStreamSubscription subscription,
-            SseEmitter emitter
-    ) {
+    private enum EnqueueResult {
+        SCHEDULE,
+        QUEUED,
+        DUPLICATE,
+        OVERFLOW
+    }
 
-        static RegisteredSubscription of(
+    private static final class RegisteredSubscription {
+
+        private final ClientStreamSubscription subscription;
+        private final SseEmitter emitter;
+        private final int maxPendingEvents;
+        private final Deque<ClientStreamRefreshNotification> pending = new ArrayDeque<>();
+        private final Map<String, Long> latestVersions = new HashMap<>();
+        private boolean sending;
+
+        private RegisteredSubscription(
                 ClientStreamSubscription subscription,
-                SseEmitter emitter
+                SseEmitter emitter,
+                int maxPendingEvents
         ) {
-            return new RegisteredSubscription(subscription, emitter);
+            this.subscription = subscription;
+            this.emitter = emitter;
+            this.maxPendingEvents = maxPendingEvents;
         }
 
-        boolean accepts(String name, String id) {
-            try {
-                return subscription.accepts(name, id);
-            } catch (RuntimeException ignored) {
-                return false;
+        private synchronized boolean accepts(String resourceName, String resourceId) {
+            return subscription.accepts(resourceName, resourceId);
+        }
+
+        private synchronized EnqueueResult enqueue(ClientStreamRefreshNotification notification) {
+            final long latestVersion = latestVersions.getOrDefault(notification.resourceId(), -1L);
+            if (notification.version() <= latestVersion) {
+                return EnqueueResult.DUPLICATE;
             }
+            if (pending.size() >= maxPendingEvents) {
+                return EnqueueResult.OVERFLOW;
+            }
+
+            latestVersions.put(notification.resourceId(), notification.version());
+            pending.addLast(notification);
+            if (!sending) {
+                sending = true;
+                return EnqueueResult.SCHEDULE;
+            }
+            return EnqueueResult.QUEUED;
+        }
+
+        private synchronized ClientStreamRefreshNotification next() {
+            if (pending.isEmpty()) {
+                sending = false;
+                return null;
+            }
+            return pending.removeFirst();
         }
     }
 }
